AniLib - fix z-index on sync page

--- a/src/pages-chibi/implementations/animeLib/style.less
+++ b/src/pages-chibi/implementations/animeLib/style.less
@@ -20,3 +20,7 @@
   outline: solid 2px #79a3c3 !important;
   outline-offset: -2px;
 }
+
+#flashinfo-div {
+  z-index: 9999 !important;
+}
